[gd_scene load_steps=25 format=3 uid="uid://i5wn6bmuoai5"]

[ext_resource type="Script" path="res://Scene/cook_friedrice.gd" id="1_agncw"]
[ext_resource type="Texture2D" uid="uid://md1bwxice2mb" path="res://assets/sprites/BG.png" id="2_3ltch"]
[ext_resource type="PackedScene" uid="uid://b816mpbifmkth" path="res://assets/Material/cooked_rice.tscn" id="2_5rksp"]
[ext_resource type="PackedScene" uid="uid://cdxkvjc8h8d47" path="res://assets/Material/egg.tscn" id="3_xkx6i"]
[ext_resource type="PackedScene" uid="uid://wm3dbo1e3giu" path="res://assets/Material/onion.tscn" id="4_62b6p"]
[ext_resource type="PackedScene" uid="uid://d0tbklfda1vmg" path="res://assets/Material/Sausage.tscn" id="5_7qjip"]
[ext_resource type="Texture2D" uid="uid://u7eb4yrjjw1y" path="res://assets/sprites/Gas_stove.png" id="7_l46h1"]
[ext_resource type="Texture2D" uid="uid://bdm8gsr3ppsj3" path="res://assets/sprites/Frame_Low.png" id="8_1v7te"]
[ext_resource type="Script" path="res://Scene/GuideLabel.gd" id="8_nyy5g"]
[ext_resource type="Texture2D" uid="uid://myw2l1owrm31" path="res://assets/sprites/Wok.png" id="8_q3v0y"]
[ext_resource type="Script" path="res://Scene/HSliderVChange.gd" id="8_vjar8"]
[ext_resource type="AudioStream" uid="uid://djn2msq36fo8r" path="res://audio/wok_fry.wav" id="9_31dsc"]
[ext_resource type="AudioStream" uid="uid://bbx3uxannyx2p" path="res://audio/less_heat.wav" id="9_g8ug0"]
[ext_resource type="Texture2D" uid="uid://bss3yese51hag" path="res://assets/sprites/Frame_Medium.png" id="9_tuun0"]
[ext_resource type="AudioStream" uid="uid://bau5tpm0jn7ve" path="res://audio/medium_heat.wav" id="10_5mqbn"]
[ext_resource type="Texture2D" uid="uid://c3jyruvxq5aav" path="res://assets/sprites/Frame_High.png" id="10_knxxd"]
[ext_resource type="AudioStream" uid="uid://3i2pd0t5dpoc" path="res://audio/over_heat.wav" id="11_nedro"]
[ext_resource type="Script" path="res://assets/DragableItem/DropArea2.gd" id="12_k4m3l"]

[sub_resource type="Animation" id="Animation_tcdfa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_73cfp"]
resource_name = "tossing"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-50, 0), Vector2(-70, -17.44), Vector2(0, 0), Vector2(50, 0), Vector2(60, -17.44)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.349066, 0.0, 0.0, -0.349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhk66"]
_data = {
"RESET": SubResource("Animation_tcdfa"),
"tossing": SubResource("Animation_73cfp")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6v2qg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dr37a"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0.376471, 0.247059, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 20.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsjbk"]
bg_color = Color(1, 0.772549, 0.333333, 1)
corner_radius_top_left = 30
corner_radius_bottom_left = 30

[node name="CookFriedRice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agncw")
buttonText = Array[String](["Cook!", "Wok hei!"])

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.196078)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3ltch")

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.226
anchor_bottom = 0.131
offset_left = 31.0
offset_top = 17.0
offset_right = 30.648
offset_bottom = 17.112
text = "SCORE:"
vertical_alignment = 1

[node name="Time" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.41
anchor_top = 0.1
anchor_right = 0.553
anchor_bottom = 0.184
offset_left = -0.320038
offset_top = 0.199997
offset_right = -0.0560303
offset_bottom = -0.23201
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Process" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.277
anchor_top = 0.019
anchor_right = 0.748
anchor_bottom = 0.102
offset_left = -0.104004
offset_top = -31.312
offset_right = 0.303955
offset_bottom = -0.0960007
text = "(3) Cook fried rice"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.222
anchor_right = 0.109
anchor_bottom = 0.921
offset_left = 0.199999
offset_top = 0.143982
offset_right = 0.431992
offset_bottom = 0.191956
grow_vertical = 2

[node name="Panel1" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(97, 97)
layout_mode = 2

[node name="CookedRice" parent="VBoxContainer/Panel1" instance=ExtResource("2_5rksp")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Panel2" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(97, 97)
layout_mode = 2

[node name="Egg" parent="VBoxContainer/Panel2" instance=ExtResource("3_xkx6i")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Panel3" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(97, 97)
layout_mode = 2

[node name="Onion" parent="VBoxContainer/Panel3" instance=ExtResource("4_62b6p")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Panel4" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(97, 97)
layout_mode = 2

[node name="Sausage" parent="VBoxContainer/Panel4" instance=ExtResource("5_7qjip")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Wok" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.302
anchor_top = 0.19
anchor_right = 0.764
anchor_bottom = 0.812
offset_left = 18.096
offset_top = 67.88
offset_right = -104.128
offset_bottom = 67.824
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_l46h1")
expand_mode = 1
stretch_mode = 5

[node name="FLow" type="TextureRect" parent="Wok"]
layout_mode = 0
offset_left = -47.0
offset_top = -49.0
offset_right = 465.0
offset_bottom = 463.0
texture = ExtResource("8_1v7te")

[node name="FMid" type="TextureRect" parent="Wok"]
visible = false
layout_mode = 0
offset_left = -46.0
offset_top = -46.0
offset_right = 466.0
offset_bottom = 466.0
texture = ExtResource("9_tuun0")

[node name="FHigh" type="TextureRect" parent="Wok"]
visible = false
layout_mode = 0
offset_left = -50.0
offset_top = -47.0
offset_right = 462.0
offset_bottom = 465.0
texture = ExtResource("10_knxxd")

[node name="Control" type="Control" parent="Wok"]
layout_mode = 1
anchor_left = -0.061
anchor_top = -0.531
anchor_right = 0.037
anchor_bottom = -0.432
offset_left = -28.99
offset_top = -17.007
offset_right = -29.17
offset_bottom = -16.904

[node name="WokTexture" type="TextureRect" parent="Wok/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.051
anchor_top = -0.32
anchor_right = 0.956
anchor_bottom = 0.6
offset_left = -2.04
offset_top = 12.8
offset_right = 477.562
offset_bottom = 494.2
pivot_offset = Vector2(185, 185)
texture = ExtResource("8_q3v0y")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wok/Control/WokTexture"]
libraries = {
"": SubResource("AnimationLibrary_uhk66")
}

[node name="DropArea" type="PanelContainer" parent="Wok/Control/WokTexture"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.129
anchor_top = 0.305
anchor_right = 0.884
anchor_bottom = 0.598
offset_left = 0.140785
offset_top = -0.155006
offset_right = 0.0345154
offset_bottom = 0.141983
theme_override_styles/panel = SubResource("StyleBoxEmpty_6v2qg")
script = ExtResource("12_k4m3l")
maxMaterial = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Wok/Control/WokTexture/DropArea"]
layout_mode = 2
theme_override_constants/separation = -50
alignment = 1

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.256
anchor_top = 0.827
anchor_right = 0.715
anchor_bottom = 0.867
offset_left = 0.0879822
offset_top = 0.104004
offset_right = 0.319946
offset_bottom = 0.18396
step = 25.0
tick_count = 5
script = ExtResource("8_vjar8")

[node name="Low" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = 64.0
offset_top = -50.0
offset_right = 162.0
offset_bottom = -1.0
text = "Low"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HSlider/Low"]
stream = ExtResource("9_g8ug0")
bus = &"SFX"

[node name="Mid" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = 194.0
offset_top = -52.0
offset_right = 333.0
offset_bottom = -3.0
text = "Medium"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HSlider/Mid"]
stream = ExtResource("10_5mqbn")
bus = &"SFX"

[node name="High" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = 364.0
offset_top = -49.0
offset_right = 462.0
text = "High"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HSlider/High"]
stream = ExtResource("11_nedro")
bus = &"SFX"

[node name="CookButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.841
anchor_top = 0.745
anchor_right = 0.93
anchor_bottom = 0.833
offset_left = -86.832
offset_top = 73.24
offset_right = -87.36
offset_bottom = 73.216
disabled = true
text = "Cook!"

[node name="Retry" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.866
anchor_top = 0.028
anchor_right = 0.96
anchor_bottom = 0.116
offset_left = 0.36792
offset_top = -0.144001
offset_right = 0.0799561
offset_bottom = -0.167999
text = "Retry!"

[node name="ScoreBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.757
anchor_top = 0.349
anchor_right = 0.803
anchor_bottom = 0.744
offset_left = -0.0640259
offset_top = 255.848
offset_right = 202.944
offset_bottom = 52.888
rotation = -1.5708
show_percentage = false

[node name="WokBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.824
anchor_top = 0.165
anchor_right = 0.87
anchor_bottom = 0.759
offset_left = -0.248169
offset_top = 385.08
offset_right = 331.76
offset_bottom = 53.168
rotation = -1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_dr37a")
theme_override_styles/fill = SubResource("StyleBoxFlat_jsjbk")
value = 80.0
show_percentage = false

[node name="Line2D" type="Line2D" parent="WokBar"]
position = Vector2(238, 37)
points = PackedVector2Array(0, -40, 0, 40)
width = 5.0
default_color = Color(0.117647, 0.933333, 0, 1)

[node name="Line2D2" type="Line2D" parent="WokBar"]
position = Vector2(316, 40.0013)
points = PackedVector2Array(0, -40, 0, 40)
width = 5.0
default_color = Color(0.117647, 0.933333, 0, 1)

[node name="Label" type="Label" parent="WokBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.584906
anchor_right = 1.0
anchor_bottom = 0.584906
offset_left = -61.0
offset_top = 35.0
offset_right = 68.0
offset_bottom = 136.0
rotation = 1.5708
theme_override_font_sizes/font_size = 20
text = "Nice
tossing!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GuideLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.865
anchor_top = 0.798
anchor_right = 0.997
anchor_bottom = 0.873
offset_left = -155.48
offset_top = -12.104
offset_right = -127.544
offset_bottom = -11.704
theme_override_font_sizes/font_size = 22
text = "don't push"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_nyy5g")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_31dsc")
bus = &"SFX"

[connection signal="value_changed" from="HSlider" to="HSlider" method="_on_value_changed"]
[connection signal="pressed" from="CookButton" to="." method="_on_cook_button_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
